﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:
	
	Code changes:
		-SmtpClient is now disposed when running inside .NET 4.0 or higher. Work item 6133.
		-The API of the provided logging provider classes is now changed in such a way that code-based 
		 configuration becomes possible. This means that the logging providers now support optional 
		 constructors that allow a provider to be completely initialized, without the need to call 
		 Initialize(string, NameValueCollection). Work item 5143.
		-AspNetSqlLoggingProvider now uses HttpContext.User.Identity.Name and IPrincipal.Identity.Name for 
		 retrieving the current logged-on user name, instead of using the System.Web.Security.Membership.
		 This makes the usage of this logger more flexible and improves performance. Work item 6092.
		-MailLoggingProvider.BuildMailMessageSubject refactored. Useless use of StringBuilder removed. This
		 improves performance.


Version 1.2.2.10128 (1.2.2) 2010-05-08
	General description:
		This release fixes a single bug in the MailLoggingProvider. The bug prevented the provider from 
		logging when either the message or the source of the LogEntry contained a new line character.
	
	Bug fixes:
		-A bug in the MailLoggingProvider prevented the provider from logging (thus sending a mail) when 
		 either the message or the source of the LogEntry contained a new line character. This is fixed by 
		 removing new line characters from message and source when bulding the mail subject and by validating 
		 during initialization whether the subjectFormatString contains a new line character. Work item 6078.


Version 1.2.1.10097 (1.2.1) 2010-04-07
	General description:
		The 1.2.0.10042 contained a critical bug that caused loading of the library to fail in a web 
		environment.
	
	Bug fixes:
		-Library could not be used in web environment. ArgumentException with message "exePath must be 